--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Xuqiang Qin"
-  avatar           : "profile_1.png"
+  avatar           : "profile_1.jpg"
   bio              : "Your biography for the left-hand sidebar"
   location         : "Location"
   employer         :
