--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
-  email            : "qinx (at) iu.edu"
+  email            : qinx (at) iu.edu
   researchgate     : "https://www.researchgate.net/profile/Xuqiang_Qin"
   uri              :
   bitbucket        :
