--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Xuqiang Qin"
   avatar           : "profile_1.jpg"
-  bio              : "Phd candidate at Department of Mathematics, Indiana University Bloomington"
-  location         : "Bloomington,IN"
+  bio              : "Postdoc at Department of Mathematics, University of North Carolina at Chapel Hill"
+  location         : "Chapel Hill,NC"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
