--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Xuqiang Qin"
   avatar           : "profile_1.jpg"
-  bio              : "Postdoc at Department of Mathematics, University of North Carolina at Chapel Hill"
+  bio              : "Postdoc at Department of Mathematics, UNC Chapel Hill"
   location         : "Chapel Hill,NC"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
