--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Xuqiang Qin"
-  avatar           : "Xuqiang Qin Willmington.heic"
+  avatar           : "Wilmington.jpg"
   bio              : "Postdoc at Department of Mathematics, UNC Chapel Hill"
   location         : "Chapel Hill,NC"
   employer         :
