--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Xuqiang Qin"
+title                    : "Xuqiang Qin 秦绪强"
 title_separator          : "-"
 name                     : Xuqiang Qin
 description              : &description "personal description"
