--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : "Xuqiang Qin 秦绪强"
 title_separator          : "-"
-name                     : Xuqiang Qin
+name                     : Xuqiang Qin 秦绪强
 description              : &description "personal description"
 url                      : https://qinxuqiang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
